@@ -248,8 +248,8 @@ Ctrl+C and Ctrl+V shortcut.
 <p>
 To copy some text in the Primary selection just hold down the left mouse button
 and move to select the area to copy. To paste, go to the target application and
-press the middle mouse button. Currently it is not possible to copy the
-selection to the Clipboard via Ctrl+C.
+press the middle mouse button. To copy text into the Clipboard, select the text
+and press Ctrl+C then go to the destination and press Ctrl+V to paste.
 <p>
 If you want to select more than one screen, hold the mouse left button down and
 scroll with PgUp, PgDn or the arrow keys.
@@ -823,6 +823,7 @@ The list of default bindings is given in the following table.
 <tr><td>Ctrl-U                     <td>                <td>View source
 <tr><td>Ctrl-B                     <td>Bookmarks       <td>View bookmarks
 <tr><td>Ctrl-Q                     <td>Quit            <td>Quit dillo
+<tr><td>Ctrl-C                     <td>Copy            <td>Copy to clipboard
 <tr><td>Ctrl-+ or Ctrl-=           <td>Bigger          <td>Zoom in
 <tr><td>Ctrl--                     <td>Smaller         <td>Zoom out
 <tr><td>Ctrl-0                     <td>100%            <td>Reset zoom to 100%
