@@ -1,3 +1,23 @@
+/*
+ * Dillo Widget
+ *
+ * Copyright 2005-2007 Sebastian Geerken <sgeerken@dillo.org>
+ * Copyright 2025 Rodrigo Arias Mallo <rodarima@gmail.com>
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ */
+
 #ifndef __DW_SELECTION_H__
 #define __DW_SELECTION_H__
 
@@ -214,8 +234,6 @@ private:
 
    void highlight0 (bool fl, DeepIterator *from, int fromChar,
                     DeepIterator *to, int toChar, int dir);
-   void copy ();
-
 public:
    enum EventType { BUTTON_PRESS, BUTTON_RELEASE, BUTTON_MOTION };
 
@@ -224,6 +242,7 @@ public:
 
    inline void setLayout (Layout *layout) { this->layout = layout; }
    void reset ();
+   void copy (int selection);
    bool buttonPress (Iterator *it, int charPos, int linkNo,
                      EventButton *event);
    bool buttonRelease (Iterator *it, int charPos, int linkNo,
