@@ -139,6 +139,7 @@ static const KeyBinding_t default_keys[] = {
    { "right"        , KEYS_RIGHT        , 0         , FL_Right        },
    { "top"          , KEYS_TOP          , 0         , FL_Home         },
    { "bottom"       , KEYS_BOTTOM       , 0         , FL_End          },
+   { "copy"         , KEYS_COPY         , FL_CTRL   , 'c'             },
    { "zoom-in"      , KEYS_ZOOM_IN      , FL_CTRL   , '+'             },
    { "zoom-in"      , KEYS_ZOOM_IN      , FL_CTRL   , '=' /* US + */  },
    { "zoom-out"     , KEYS_ZOOM_OUT     , FL_CTRL   , '-'             },
