@@ -35,6 +35,7 @@ void a_UIcmd_forw(void *vbw);
 void a_UIcmd_forw_nt(void *vbw);
 void a_UIcmd_forw_popup(void *vbw, int x, int y);
 void a_UIcmd_home(void *vbw);
+void a_UIcmd_copy(void *vbw);
 void a_UIcmd_zoom_in(void *vbw);
 void a_UIcmd_zoom_out(void *vbw);
 void a_UIcmd_zoom_reset(void *vbw);
